--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.5",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
     "next": "^14.2.4",
